--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 header {
   display: flex;
   align-items: baseline;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   margin-bottom: 0px;
+  
 }
 
 h1 {
@@ -63,13 +64,14 @@ h3{
   font-weight: 700;
   font-size: 25px;
   line-height: 10px;
+  padding-top: 0;
   flex: none;
   order: 0;
   flex-grow: 0;
   display: flex;
   align-items: center;
   text-align: left;
-  margin: 5px;
+  margin: 0px;
 }
 p{
     color: #344563;
@@ -89,8 +91,35 @@ h4{
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-margin: 5px;
+margin: 10px;
 }
 .social img{
     margin-right: 10px;
+}
+.container{
+    display: flex;
+}
+.image-6{
+    position: relative;
+    left: 35vh; 
+}
+.image-7{
+    position: relative;
+    left: 28vh;
+    top: 25px;
+}
+.image-8{
+    position: relative;
+    left: 40vh;
+    bottom: 16px;
+}
+.image-9{
+    position: relative;
+    left: 33vh;
+}
+
+.image-10{
+    position: relative;
+    left: 7vh;
+    top: 20px;
 }
