--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ header {
   display: flex;
   align-items: baseline;
   padding: 20px 20px 0 20px;
-  margin-bottom: 0px;
-  
+  margin-bottom: 0;
 }
 
 h1 {
@@ -19,7 +18,6 @@ h1 {
   display: flex;
   align-items: center;
   text-align: center;
-  
 }
 
 header img {
@@ -28,37 +26,39 @@ header img {
   width: 5%;
   height: 5%;
 }
-.image-1{
-    position: relative;
-    right: 10px;
-    bottom: 50px;
+
+.image-1 {
+  position: relative;
+  right: 10px;
+  bottom: 50px;
 }
 
-.image-2{
-    position: relative;
-    left: 35%;  
-    bottom: 50px;
+.image-2 {
+  position: relative;
+  left: 35%;
+  bottom: 50px;
 }
 
-.image-3{
-    position: relative;
-    left: 31%;  
-    bottom: 50px;
+.image-3 {
+  position: relative;
+  left: 31%;
+  bottom: 50px;
 }
 
-.image-4{
-    position: relative;
-    left: 60%; 
-    bottom: 50px; 
+.image-4 {
+  position: relative;
+  left: 60%;
+  bottom: 50px;
 }
 
-.image-5{
-    position: relative;
-    left: 45%;  
-    top: 10px;
+.image-5 {
+  position: relative;
+  left: 45%;
+  top: 10px;
 }
-h3{
-    color: #172b4d;
+
+h3 {
+  color: #172b4d;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -71,55 +71,63 @@ h3{
   display: flex;
   align-items: center;
   text-align: left;
-  margin: 0px;
-}
-p{
-    color: #344563;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-size: 14px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    display: flex;
-    align-items: center;
-    text-align: left;
-}
-h4{
-    color: #7F8CFF;
-    font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-margin: 10px;
-}
-.social img{
-    margin-right: 10px;
-}
-.container{
-    display: flex;
-}
-.image-6{
-    position: relative;
-    left: 35vh; 
-}
-.image-7{
-    position: relative;
-    left: 28vh;
-    top: 25px;
-}
-.image-8{
-    position: relative;
-    left: 40vh;
-    bottom: 16px;
-}
-.image-9{
-    position: relative;
-    left: 33vh;
+  margin: 0;
 }
 
-.image-10{
-    position: relative;
-    left: 7vh;
-    top: 20px;
+p {
+  color: #344563;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+
+h4 {
+  color: #7f8cff;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  margin: 10px;
+}
+
+.social img {
+  margin-right: 10px;
+}
+
+.container {
+  display: flex;
+}
+
+.image-6 {
+  position: relative;
+  left: 35vh;
+}
+
+.image-7 {
+  position: relative;
+  left: 28vh;
+  top: 25px;
+}
+
+.image-8 {
+  position: relative;
+  left: 40vh;
+  bottom: 16px;
+}
+
+.image-9 {
+  position: relative;
+  left: 33vh;
+}
+
+.image-10 {
+  position: relative;
+  left: 7vh;
+  top: 20px;
 }
