--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-header {
+nav {
   display: flex;
   align-items: baseline;
   padding: 20px 20px 0 20px;
   margin-bottom: 0;
 }
 
-h1 {
+header {
   color: #6070ff;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 20px;
   flex: none;
   order: 0;
@@ -20,65 +20,44 @@ h1 {
   text-align: center;
 }
 
-header img {
+nav img {
   position: relative;
   left: 70%;
   width: 5%;
   height: 5%;
 }
 
-.image-1 {
-  position: relative;
-  right: 10px;
-  bottom: 50px;
+main {
+    background-image:url(Images/header-shapes\ mobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-.image-2 {
-  position: relative;
-  left: 35%;
-  bottom: 50px;
-}
-
-.image-3 {
-  position: relative;
-  left: 31%;
-  bottom: 50px;
-}
-
-.image-4 {
-  position: relative;
-  left: 60%;
-  bottom: 50px;
-}
-
-.image-5 {
-  position: relative;
-  left: 45%;
-  top: 10px;
-}
-
-h3 {
+h1 {
   color: #172b4d;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 25px;
-  line-height: 10px;
-  padding-top: 0;
+  font-size: 45px;
+  line-height: 52px;
+  padding-top: 10vh;
   flex: none;
   order: 0;
   flex-grow: 0;
   display: flex;
-  align-items: center;
+  align-items: left;
   text-align: left;
-  margin: 0;
 }
 
 p {
   color: #344563;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 24px;
   flex: none;
   order: 1;
   flex-grow: 0;
@@ -87,47 +66,16 @@ p {
   text-align: left;
 }
 
-h4 {
+.contain {
   color: #7f8cff;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  margin: 10px;
+  line-height: 24px;
 }
 
 .social img {
   margin-right: 10px;
-}
-
-.container {
-  display: flex;
-}
-
-.image-6 {
-  position: relative;
-  left: 35vh;
-}
-
-.image-7 {
-  position: relative;
-  left: 28vh;
-  top: 25px;
-}
-
-.image-8 {
-  position: relative;
-  left: 40vh;
-  bottom: 16px;
-}
-
-.image-9 {
-  position: relative;
-  left: 33vh;
-}
-
-.image-10 {
-  position: relative;
-  left: 7vh;
-  top: 20px;
+  padding-bottom: 10vh;
 }
