--- a/style.css
+++ b/style.css
@@ -79,3 +79,31 @@ p {
   margin-right: 10px;
   padding-bottom: 10vh;
 }
+
+#secondPage {
+  margin-top: 20px;
+  box-sizing: border-box;
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 16px;
+gap: 12px;
+width: 327px;
+height: 552px;
+background: #FFFFFF;
+border: 1px solid #DFE1E6;
+border-radius: 16px;
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.snap {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+  border-radius: 8px;
+  width: 295px;
+  height: 220px;
+}
