--- a/style.css
+++ b/style.css
@@ -117,3 +117,80 @@ flex-grow: 0;
   width: 295px;
   height: 220px;
 }
+
+.tonic{
+width: 295px;
+height: 36px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+margin: 0;
+line-height: 44px;
+color: #172B4D;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    margin: 0;
+    padding: 0;
+    gap: 12px;
+    /* width: 236px; */
+    height: 32px;
+    width: 80%;
+    /* justify-content: space-around; */
+    align-items: baseline; 
+    
+}
+
+.canopy{
+ width: 55px;
+height: 16px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+margin: 0;
+padding: 0;
+position: relative;
+right: 38px;
+font-size: 13px;
+line-height: 16px;
+color: #344563;
+}
+
+.details{
+    display: flex;
+    align-items: baseline;
+    position: relative;
+right: 30px;
+}
+.details img {
+ width: 8px;
+ height: 8px;
+ margin-right: 5px;
+}
+
+.content{
+width: 295px;
+height: 76px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 24px;
+color: #344563;
+}
+
+.link a { 
+    width: 29px;
+height: 16px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 16px;
+letter-spacing: 0.03em;
+color: #6070FF;
+}
