--- a/style.css
+++ b/style.css
@@ -93,104 +93,139 @@ ul li {
 #secondPage {
   margin-top: 20px;
   box-sizing: border-box;
-display: flex;
-flex-direction: column;
-align-items: center;
-padding: 16px;
-gap: 12px;
-width: 327px;
-height: 552px;
-background: #FFFFFF;
-border: 1px solid #DFE1E6;
-border-radius: 16px;
-flex: none;
-order: 0;
-flex-grow: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  gap: 12px;
+  width: 327px;
+  height: 552px;
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 .snap {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  justify-content: center;
   border-radius: 8px;
   width: 295px;
   height: 220px;
 }
 
-.tonic{
-width: 295px;
-height: 36px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-margin: 0;
-line-height: 44px;
-color: #172B4D;
+.tonic {
+  width: 295px;
+  height: 36px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  margin: 0;
+  line-height: 44px;
+  color: #172b4d;
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
-    align-items: left;
-    margin: 0;
-    padding: 0;
-    gap: 12px;
-    /* width: 236px; */
-    height: 32px;
-    width: 80%;
-    /* justify-content: space-around; */
-    align-items: baseline; 
-    
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  gap: 12px;
+  height: 32px;
+  width: 80%;
+  align-items: baseline;
 }
 
-.canopy{
- width: 55px;
-height: 16px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-margin: 0;
-padding: 0;
-position: relative;
-right: 38px;
-font-size: 13px;
-line-height: 16px;
-color: #344563;
+.canopy {
+  width: 55px;
+  height: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  right: 38px;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
 }
 
-.details{
-    display: flex;
-    align-items: baseline;
-    position: relative;
-right: 30px;
+.details {
+  display: flex;
+  align-items: baseline;
+  position: relative;
+  right: 50px;
+  padding-left: 30px;
 }
+
 .details img {
- width: 8px;
- height: 8px;
- margin-right: 5px;
+  width: 8px;
+  height: 8px;
+  margin-right: 5px;
 }
 
-.content{
-width: 295px;
-height: 76px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 15px;
-line-height: 24px;
-color: #344563;
+.content {
+  width: 295px;
+  height: 76px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
 }
 
-.link a { 
-    width: 29px;
-height: 16px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-letter-spacing: 0.03em;
-color: #6070FF;
+.link a {
+  background: #ebebff;
+  border-radius: 8px;
+  width: 29px;
+  height: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+  position: relative;
+  right: 18%;
+  text-decoration: none;
+  margin: 20px;
+}
+
+.button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 12px;
+  gap: 10px;
+  position: relative;
+  width: 124px;
+  height: 48px;
+  right: 30%;
+  top: 0;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+}
+
+.button a {
+  width: 100px;
+  height: 20px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  text-decoration: none;
 }
