--- a/style.css
+++ b/style.css
@@ -129,7 +129,8 @@ ul li {
   line-height: 44px;
   color: #172b4d;
 }
-.multi{
+
+.multi {
   width: 295px;
   height: 70px;
   font-family: 'Poppins', sans-serif;
@@ -250,16 +251,14 @@ ul li {
 }
 
 .about-button {
-    /* display: flex; */
-    /* flex-direction: row; */
-    align-items: center; 
-    padding: 10px;
-    position: relative;
-    bottom: 10vh;
-    width: 150px;
-    border: 1px solid #6070ff;
-    border-radius: 8px;
-  }
+  align-items: center;
+  padding: 10px;
+  position: relative;
+  bottom: 10vh;
+  width: 150px;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+}
 
 .about-button a {
   width: 100px;
@@ -275,78 +274,200 @@ ul li {
 }
 
 .lang {
-    display: flex;
-    align-items: baseline;
-    width: 90%;
+  display: flex;
+  align-items: baseline;
+  width: 90%;
 }
-.lang h3{
-font-family: 'Poppins',sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 24px;
-position: relative;
-bottom: 80px;
+
+.lang h3 {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  position: relative;
+  bottom: 80px;
 }
-.lang img{
-    width: 5%;
-    height: 10%;
-    margin-left: auto;
-    position: relative;
-bottom: 80px;
+
+.lang img {
+  width: 5%;
+  height: 10%;
+  margin-left: auto;
+  position: relative;
+  bottom: 80px;
 }
 
 .basic {
- display: flex;
- flex-direction: column;
-background: #F7F7F9;
-border-radius: 8px;
-align-items: baseline;
+  display: flex;
+  flex-direction: column;
+  background: #f7f7f9;
+  border-radius: 8px;
+  align-items: baseline;
+  position: relative;
+  bottom: 70px;
 }
 
 .basic li {
-    height: 24px;
-    top: calc(50% - 24px/2 - 0.36px);
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 20px;
-    display: flex;
-    align-items: baseline;
-    width:50%;
-    color: #253858;
-    
+  height: 10px;
+  top: calc(50% - 24px / 2 - 0.36px);
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 5px;
+  display: flex;
+  align-items: baseline;
+  width: 50%;
+  color: #253858;
+}
+
+.contact p {
+  position: relative;
+  width: 327px;
+  height: 102px;
+  top: 60px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ebebff;
 }
 
 .basic li p {
-    margin-left: auto;
-    width: 100px;
-    display: flex;
-    justify-content: start;
-    position: relative;
-    bottom: 10px;
+  margin-left: auto;
+  width: 100px;
+  display: flex;
+  justify-content: start;
+  position: relative;
+  bottom: 10px;
 }
+
 .lang-skills {
-    display: flex;
-    align-items: baseline;
-    height: 1px;
-    width: 90%;
-    border-bottom: 1px solid #DFE1E6;
+  position: relative;
+  display: flex;
+  align-items: baseline;
+  width: 90%;
+  bottom: 70px;
 }
-.lang-skills h3{
-font-family: 'Poppins',sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 24px;
-position: relative;
-bottom: 80px;
+
+.lang-skills h3 {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  position: relative;
 }
-.lang-skills img{
-    width: 5%;
-    height: 10%;
-    margin-left: auto;
-    position: relative;
-bottom: 80px;
+
+.lang-skills img {
+  position: relative;
+  margin-left: auto;
+}
+
+.contact {
+  background-image: url(Images/contact\ form\ shapes-mobile@2x.png);
+  background-color: #6070ff;
+  background-repeat: no-repeat;
+  background-position-x: 120px;
+  background-position-y: 12px;
+  background-size: auto 757px;
+  border-radius: 100px 0% 0% 0%;
+  padding: 20px;
+  height: 779px;
+  margin-top: 10px;
+}
+
+.contact-background {
+  position: relative;
+  left: 30%;
+  height: 100vh;
+}
+
+.contact h2 {
+  position: relative;
+  width: 801px;
+  height: 56px;
+  left: 10%;
+  top: 30px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+}
+
+.contact input {
+  position: relative;
+  width: 100%;
+  height: 48px;
+  left: 0;
+  right: 0;
+  top: 100px;
+  margin-top: 20px;
+  bottom: 0;
+  background: #fff;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  color: #172b4d;
+  padding-left: 10px;
+}
+
+.contact textarea {
+  position: relative;
+  top: 120px;
+  width: 100%;
+  height: 170px;
+  border-radius: 8px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #b3bac5;
+  padding-left: 10px;
+}
+
+.contact-button {
+  align-items: center;
+  padding: 10px;
+  position: relative;
+  top: 140px;
+  width: 150px;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+}
+
+.contact-button a {
+  width: 100px;
+  height: 30px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  text-decoration: none;
+}
+
+.shape {
+  position: relative;
+  bottom: 10vh;
+  width: 327px;
+  height: 1px;
+  background: #dfe1e6;
+  border-radius: 10px;
 }
