--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ ul li {
   padding-bottom: 10vh;
 }
 
-#secondPage {
-  margin-top: 20px;
+.grid-item {
+  margin-top: 20px 20px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -154,6 +154,7 @@ ul li {
 }
 
 .canopy {
+  display: flex;
   width: 55px;
   height: 16px;
   font-family: 'Poppins', sans-serif;
@@ -200,14 +201,23 @@ ul li {
 }
 
 .link {
-  background-color: #ebebff;
-  border-radius: 8px;
   display: flex;
   width: 29px;
-  height: 16px;
+  height: 10px;
   position: relative;
   right: 50%;
   text-decoration: none;
+}
+
+.link li {
+  margin: 0 5px 12px 0;
+  background: #ebebff;
+  font-family: 'Poppins', sans-serif;
+  padding: 0 10px;
+  font-size: 18px;
+  border-radius: 10px;
+  color: #6070ff;
+  cursor: pointer;
 }
 
 a {
@@ -215,7 +225,6 @@ a {
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 16px;
   letter-spacing: 0.03em;
   color: #6070ff;
   text-decoration: none;
@@ -267,6 +276,7 @@ a {
 
 button:hover {
   background-color: #6070ff;
+  color: #fff;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -325,6 +335,7 @@ button a:hover {
 }
 
 .lang {
+  margin-top: 20px;
   display: flex;
   align-items: baseline;
   width: 90%;
