--- a/css/contact.css
+++ b/css/contact.css
@@ -22,13 +22,13 @@
 }
 
 #contact-button:hover {
-    background-color: #2230D2;
-    color: #fff;
-  }
-  
-  #contact-button a:hover {
-    color: #fff;
-  }
+  background-color: #2230d2;
+  color: #fff;
+}
+
+#contact-button a:hover {
+  color: #fff;
+}
 
 #contact {
   background-image: url(/Images/contact\ form\ shapes-mobile@2x.png);
@@ -51,7 +51,8 @@
   left: 30%;
   height: 30vh;
 }
-form{
+
+form {
   order: 3;
   position: relative;
   bottom: 50px;
@@ -73,7 +74,7 @@ form{
 
 #contact h2 {
   position: relative;
-  width:100%;
+  width: 100%;
   height: 56px;
   left: 5%;
   top: 30px;
@@ -97,7 +98,7 @@ form{
   right: 0;
   top: 100px;
   margin-top: 20px;
-   bottom: 0; 
+  bottom: 0;
   background: #fff;
   border: 1px solid #cfd8dc;
   border-radius: 8px;
@@ -129,8 +130,8 @@ form{
 }
 
 .bottom {
-    order: 4;
-    position: relative;
-    top: 20vh;
-    left: 18vh;
+  order: 4;
+  position: relative;
+  top: 20vh;
+  left: 18vh;
 }
