--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
   width: 100%;
   margin: 0;
   padding: 0;
+  width: 327px;
 }
 
 h1 {
@@ -318,6 +319,7 @@ button a:hover {
 
 .about {
   margin-top: 40px;
+  width: 327px;
 }
 
 .about-social li {
@@ -412,33 +414,38 @@ button a:hover {
 
 .basic li p {
   margin-left: auto;
-  width: 100%;
+  width: 327px;
   display: flex;
   justify-content: start;
   position: relative;
   bottom: 10px;
 }
 
-.lang-skills li {
+/* FRAMEWORK AND SKILL STARTS HERE*/
+.lang-skills {
   display: inline;
-  align-items: baseline;
-  width: 100%;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: poppins, sans-serif;
+  line-height: 24px;
+  font-style: normal;
 }
-
-.lang-skills img {
-  width: 10%;
-  height: 10%;
-  margin-left: auto;
-  position: relative;
-  bottom: 120px;
-  left: 55vh;
+.framework {
+  margin-left: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
 .skills {
-  position: relative;
-  top: 10vh;
-  right: 29vh;
+  margin-left: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
+.image {
+  padding-left: 50px;
+}
+
 
 .contact {
   background-image: url(Images/contact\ form\ shapes-mobile@2x.png);
@@ -452,6 +459,8 @@ button a:hover {
   height: 770px;
   position: relative;
   bottom: 15vh;
+  width: 327px;
+  margin-top: 10vh
 }
 
 .contact-background {
