--- a/css/contact.css
+++ b/css/contact.css
@@ -1,15 +1,11 @@
 #contact-button {
+  display: flex;
   align-items: center;
-  padding: 10px;
+  border-radius: 8px;
+  padding: 20px;
   position: relative;
   top: 140px;
   width: 150px;
-  border: 1px solid #6070ff;
-  border-radius: 8px;
-}
-
-#contact-button a {
-  width: 100px;
   height: 30px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -17,16 +13,11 @@
   font-size: 15px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: #396df2;
-  text-decoration: none;
+  color: #6070ff;
 }
 
 #contact-button:hover {
   background-color: #2230d2;
-  color: #fff;
-}
-
-#contact-button a:hover {
   color: #fff;
 }
 
