--- a/css/card.css
+++ b/css/card.css
@@ -1,12 +1,12 @@
 .grid-item {
-  margin: 20px 0 0 10px;
+  margin: auto;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 16px;
   gap: 12px;
-  width: 327px;
+  width: 90%;
   height: 552px;
   background: #fff;
   border: 1px solid #dfe1e6;
