--- a/css/contact.css
+++ b/css/contact.css
@@ -13,7 +13,8 @@
   font-size: 15px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #7F8CFF;
+  box-shadow: #7F8CFF;
   border: none;
 }
 
@@ -34,9 +35,9 @@
   height: 773px;
   position: relative;
   bottom: 15vh;
-  display: flex;
-  flex-flow: column wrap;
-  width: 327px;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px;
   margin-top: 10vh;
 }
 
@@ -56,7 +57,7 @@ form {
   position: relative;
   width: 327px;
   height: 102px;
-  top: 60px;
+  top: 30px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
