--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ html,
 body {
   width: 100%;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
@@ -39,8 +41,10 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   width: 327px;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px;
 }
 
 h1 {
@@ -66,7 +70,6 @@ p {
   font-size: 16px;
   line-height: 24px;
   flex: none;
-  order: 1;
   flex-grow: 0;
   display: flex;
   align-items: center;
