--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,16 @@ html,
 body {
   width: 100%;
   overflow-x: hidden;
-  margin: 0;
-  padding: 0;
 }
 
 .header {
-  display: flex;
+  max-width: 95%;
+  margin: auto;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 12fr 1fr;
   align-items: baseline;
   padding: 20px 20px 0 20px;
-  margin-bottom: 0;
 }
 
 .logo {
@@ -20,27 +21,32 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
   display: flex;
-  align-items: center;
   text-align: center;
   text-decoration: none;
 }
 
+nav {
+  display: flex;
+  margin-right: auto;
+}
+
+.nav-link {
+  display: none;
+}
+
 .nav {
-  position: relative;
-  left: 35vh;
-  width: 20%;
-  height: 20%;
+  max-width: 20px;
+  min-height: 20%;
+  margin-right: auto;
+
 }
 
 main {
   background-image: url(Images/header-shapes\ mobile.png);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 327px;
+  max-width: 327px;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -52,15 +58,8 @@ main {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 45px;
+  font-size: 40px;
   line-height: 52px;
-  padding-top: 10vh;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  display: flex;
-  align-items: left;
-  text-align: left;
 }
 
 p {
@@ -76,6 +75,10 @@ p {
   text-align: left;
 }
 
+.desktop-card {
+  display: none;
+}
+
 .contain {
   color: #7f8cff;
   font-family: 'Poppins', sans-serif;
@@ -85,7 +88,7 @@ p {
   line-height: 24px;
 }
 
-ul {
+.social {
   display: flex;
   justify-content: start;
   list-style: none;
@@ -93,15 +96,15 @@ ul {
   right: 32px;
   align-items: baseline;
 }
-
-ul li {
+.social li {
   margin-right: 20px;
   padding-bottom: 10vh;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 8fr 2fr;
     justify-items: baseline;
   
   }
@@ -124,9 +127,14 @@ ul li {
   }
   
   .nav-link {
-    
-    position: relative;
     bottom: 1vh;
+    display: contents;
+    display: flex;
+    gap: 1rem;
+  }
+
+  .nav-link li{
+    list-style: none;
   }
 
   .nav-link a {
@@ -148,7 +156,7 @@ ul li {
   font-style: normal;
   font-weight: 700;
   line-height: 5px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   }
 
   #content2 {
