--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ main {
   background-image: url(Images/header-shapes\ mobile.png);
   background-repeat: no-repeat;
   background-size: cover;
-  max-width: 327px;
+  max-width: 90%;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -146,7 +146,15 @@ p {
   }
   
   .first-section {
-    width: 80%;
+    margin-top: 5vh;
+    min-width: 90%;
+    background-image: url(Images/header-shapes\ mobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 20px;
   }
 
   #content1 {
