--- a/css/card.css
+++ b/css/card.css
@@ -4,18 +4,14 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 16px;
   gap: 12px;
-  width: 90%;
-  height: 552px;
+  min-width: 95%;
+  min-height: 552px;
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin-bottom: 15vh;
+  margin-bottom: 10vh;
 }
 
 .snap {
@@ -24,25 +20,26 @@
   margin: auto;
   justify-content: center;
   border-radius: 8px;
-  width: 295px;
-  height: 220px;
+  min-width: 100%;
+  min-height: 220px;
 }
 
 .tonic {
-  width: 295px;
-  height: 36px;
+  min-width: 100%;
+  max-height: 36px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
+  display: flex;
   font-weight: 700;
   font-size: 32px;
-  margin: 0;
   line-height: 44px;
   color: #172b4d;
+  margin-bottom: 0;
 }
 
 .multi {
-  width: 295px;
-  height: 40px;
+  min-width: 100%;
+  min-height: 40px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -54,37 +51,28 @@
 
 .container {
   display: flex;
-  flex-direction: row;
-  margin-top: 20px;
-  padding-left: 25px;
-  gap: 12px;
-  height: 18px;
-  width: 80%;
+  gap: 2.5rem;
+  max-height: 18px;
+  min-width: 100%;
   align-items: baseline;
 }
 
 .canopy {
   display: flex;
-  width: 55px;
-  height: 16px;
+  max-width: 55px;
+  max-height: 16px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 600;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  right: 38px;
   font-size: 13px;
   line-height: 16px;
   color: #344563;
+  margin-bottom: 0;
 }
 
 .details {
   display: flex;
   align-items: baseline;
-  position: relative;
-  right: 50px;
-  padding-left: 30px;
 }
 
 .details p {
@@ -100,22 +88,24 @@
 }
 
 .content {
-  width: 295px;
-  height: 76px;
+  min-width: 100%;
+  min-height: 76px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
   color: #344563;
+  margin-bottom: 0;
 }
 
 .link {
   display: flex;
-  max-width: 29px;
-  min-height: 10px;
-  position: relative;
-  right: 50%;
+  float: left;
+  align-content: flex-start;
+  padding:0;
+  min-width: 100%;
+  max-height: 10px;
   text-decoration: none;
 }
 
@@ -128,6 +118,7 @@
   border-radius: 10px;
   color: #6070ff;
   cursor: pointer;
+  list-style: none;
 }
 
 a {
@@ -149,8 +140,6 @@ a {
   position: relative;
   max-width: 124px;
   min-height: 48px;
-  right: 30%;
-  top: 0;
   border: 1px solid #6070ff;
   border-radius: 8px;
 }
