--- a/css/card.css
+++ b/css/card.css
@@ -176,6 +176,7 @@ a {
   body {
     max-width: 90%;
     margin: auto;
+    background-color: #e5e5e5;
   }
   .mobile-card {
     display: none;
@@ -192,7 +193,7 @@ a {
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
-  margin-bottom: 5vh;
+  margin-bottom: 10vh;
 }
 
 .main-img {
@@ -207,7 +208,7 @@ a {
 
 .tonic-desktop {
   min-width: 100%;
-  max-height: 36px;
+  min-height: 36px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   display: flex;
@@ -216,18 +217,6 @@ a {
   line-height: 44px;
   color: #172b4d;
   margin-bottom: 0;
-}
-
-.multi-desktop {
-  max-width: 295px;
-  min-height: 40px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 35px;
-  margin: 0;
-  line-height: 44px;
-  color: #172b4d;
 }
 
 .container-desktop {
@@ -241,7 +230,7 @@ a {
 
 .canopy-desktop{
   display: flex;
-  max-width: 55px;
+  min-width: 55px;
   max-height: 16px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -291,14 +280,15 @@ a {
   padding-top: 0;
   padding-left: 0;
   text-decoration: none;
-  gap: 1rem;
+  gap: 0.6rem;
 }
 
 .link-desktop li {
   min-height: 24px;
+  min-width : 6vh;
   background: #ebebff;
   font-family: 'Poppins', sans-serif;
-  padding: 4px 12px;
+  padding: 2px;
   font-size: 18px;
   border-radius: 8px;
   color: #6070ff;
@@ -310,7 +300,6 @@ a {
   font-family: 'Poppins', sans-serif;
   font-style: medium;
   font-size: 12px;
-  letter-spacing: 3%;
   color: #6070ff;
   text-decoration: none;
 }
@@ -351,4 +340,5 @@ a {
 .button-desktop a:hover {
   color: #fff;
 }
+
 }
