--- a/css/contact.css
+++ b/css/contact.css
@@ -138,3 +138,61 @@ form {
   top: 20vh;
   left: 18vh;
 }
+
+@media only screen and (min-width: 768px) {
+  #contact {
+    width: 90%;
+    background-image: url(/Images/contact\ form\ shapes-mobile@2x.png);
+    background-color: #6070ff;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+   #contact h2 {
+    order: 1;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+   }
+
+   #contact p {
+    order: 2;
+    margin: auto;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+   }
+
+   form {
+    position: relative;
+    bottom: 20vh;
+    margin: auto;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    order: 3;
+   }
+   #contact textarea {
+    order: 2;
+   }
+
+   #contact input {
+    order: 1;
+   }
+
+   #contact button {
+    display: flex;
+    justify-content: center;
+    order: 3;
+    margin-left: 30%;
+   }
+
+}
